--- a/requirements.txt
+++ b/requirements.txt
@@ -1,155 +1,14 @@
-aiohttp==3.9.5
-aiosignal==1.3.1
-annotated-types==0.7.0
-anyio==4.4.0
-asgiref==3.8.1
-attrs==23.2.0
-backoff==1.11.1
-bcrypt==4.2.0
-beautifulsoup4==4.12.3
-bs4==0.0.2
-build==1.2.1
-cachetools==5.4.0
-certifi==2024.7.4
-cffi==1.16.0
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.6
-chromadb==0.5.5
-click==8.1.7
-colorama==0.4.6
-coloredlogs==15.0.1
-dataclasses-json==0.6.7
-Deprecated==1.2.14
-distro==1.9.0
-dnspython==2.6.1
-email_validator==2.2.0
-fastapi==0.111.1
-fastapi-cli==0.0.4
-filelock==3.15.4
-flatbuffers==24.3.25
-frozenlist==1.4.1
-fsspec==2024.6.1
-google-api-core==2.15.0
-google-auth==2.25.2
-google-cloud-aiplatform==1.38.1
-google-cloud-bigquery==3.14.1
-google-cloud-core==2.4.1
-google-cloud-resource-manager==1.11.0
-google-cloud-storage==2.14.0
-google-crc32c==1.5.0
-google-resumable-media==2.7.0
-googleapis-common-protos==1.62.0
-greenlet==3.0.3
-grpc-google-iam-v1==0.13.1
-grpcio==1.65.1
-grpcio-status==1.62.2
-grpcio-tools==1.65.1
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-httpcore==1.0.5
-httptools==0.6.1
-httpx==0.27.0
-huggingface-hub==0.24.0
-humanfriendly==10.0
-hyperframe==6.0.1
-idna==3.7
-importlib_metadata==7.1.0
-importlib_resources==6.4.0
-Jinja2==3.1.4
-joblib==1.4.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-kubernetes==30.1.0
-langchain==0.2.5
-langchain-chroma==0.1.2
-langchain-community==0.2.5
-langchain-core==0.2.22
-langchain-openai==0.1.8
-langchain-qdrant==0.1.2
-langchain-text-splitters==0.2.2
-langsmith==0.1.93
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.21.3
-mdurl==0.1.2
-mmh3==4.1.0
-monotonic==1.6
-mpmath==1.3.0
-multidict==6.0.5
-mypy-extensions==1.0.0
-nltk==3.8.1
-numpy==1.26.4
-oauthlib==3.2.2
-onnxruntime==1.18.1
-openai==1.37.0
-opentelemetry-api==1.25.0
-opentelemetry-exporter-otlp-proto-grpc==1.11.1
-opentelemetry-instrumentation==0.46b0
-opentelemetry-instrumentation-asgi==0.46b0
-opentelemetry-instrumentation-fastapi==0.46b0
-opentelemetry-proto==1.11.1
-opentelemetry-sdk==1.25.0
-opentelemetry-semantic-conventions==0.46b0
-opentelemetry-util-http==0.46b0
-orjson==3.10.6
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==24.1
-portalocker==2.10.1
-posthog==3.5.0
-proto-plus==1.24.0
-protobuf==3.20.3
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycparser==2.22
-pydantic==2.8.2
-pydantic_core==2.20.1
-Pygments==2.18.0
-PyPika==0.48.9
-pyproject_hooks==1.1.0
-pyreadline3==3.4.1
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-multipart==0.0.9
-pywin32==306; sys_platform == 'win32'
-PyYAML==6.0.1
-qdrant-client==1.10.1
-regex==2024.5.15
-requests==2.32.3
-requests-oauthlib==2.0.0
-rich==13.7.1
-rsa==4.9
-selenium==4.23.0
-setuptools==71.1.0
-shapely==2.0.5
-shellingham==1.5.4
-six==1.16.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.5
-SQLAlchemy==2.0.31
-starlette==0.37.2
-sympy==1.13.1
-tenacity==8.5.0
-tiktoken==0.7.0
-tokenizers==0.19.1
-tqdm==4.66.4
-trio==0.26.0
-trio-websocket==0.11.1
-typer==0.12.3
-typing-inspect==0.9.0
-typing_extensions==4.9.0
-urllib3==2.2.2
-uvicorn==0.30.3
-watchfiles==0.22.0
-webdriver-manager==4.0.1
-websocket-client==1.8.0
-websockets==12.0
-wrapt==1.16.0
-wsproto==1.2.0
-yarl==1.9.4
-zipp==3.19.2
-
-#Python 3.12.4
+fastapi
+selenium
+webdriver_manager
+bs4
+langchain_chroma
+langchain_text_splitters
+langchain_openai
+langchain_community
+qdrant-client
+langchain_qdrant
+openai
+python-dotenv
+nltk
+chromadb
